# graphiti-rust

./: .env.docker  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  augment.mcp.json  config.free.toml  config.learning.toml  config.prod.toml  config.toml  docker-compose.prod.yml  docker-compose.yml  license_report.md  mcp-tools.json  project-config-template.toml  prometheus.yml  rust-toolchain.toml
artifacts/: semantic_verdict.json
artifacts/config/: app_config.canonical.json  app_config.canonical.toml  app_config.canonical.yaml
crates/graphiti-context/: Cargo.toml  README.md
crates/graphiti-context-cli/: Cargo.toml
crates/graphiti-context-cli/src/: main.rs
crates/graphiti-context/src/: chunking.rs  embedding.rs  lib.rs  rules.rs  scanning.rs  storage.rs  types.rs  util.rs  vectordb.rs  vectordb_qdrant.rs
crates/graphiti-core/: Cargo.toml
crates/graphiti-core/benches/: graphiti_bench.rs
crates/graphiti-core/src/: advanced_search.rs  ai_enhancement.rs  batch_processing.rs  code_entities.rs  code_processor.rs  community.rs  config.rs  episode_processor.rs  error.rs  error_handling.rs  graph.rs  graph_traversal.rs  graphiti.rs  knowledge_patterns.rs  lib.rs  louvain.rs  metrics.rs  performance_optimizer.rs  scheduler.rs  storage.rs
crates/graphiti-cozo/: Cargo.toml
crates/graphiti-cozo/src/: lib.rs
crates/graphiti-distributed/: Cargo.toml
crates/graphiti-distributed/src/: consensus.rs  discovery.rs  distributed_graphiti.rs  graph_sync.rs  health.rs  lib.rs  libp2p_compat.rs  load_balancer.rs  network.rs  network_manager.rs  node.rs  replication.rs  sharding.rs  simple_network.rs  transport.rs
crates/graphiti-llm/: Cargo.toml
crates/graphiti-llm/examples/: gemma_check.rs
crates/graphiti-llm/src/: config.rs  embed_anything_client.rs  embedder.rs  factory.rs  fallback.rs  gemma_candle.rs  lib.rs  ollama.rs  openai.rs  qwen3_embed_anything.rs  qwen_candle.rs  qwen_local.rs  service_factory.rs
crates/graphiti-mcp/: Cargo.toml  MCP_SERVER_SUCCESS.md  README.md  config.free.toml  config.toml
crates/graphiti-mcp/src/: ast_parser.rs  config.rs  handlers_old.rs  learning_endpoints.rs  learning_integration.rs  lib.rs  main.rs  middleware_old.rs  project_scanner.rs  qdrant_index.rs  serena_config.rs  serena_ra.rs  serena_symbols.rs  serena_tools.rs  server.rs  types.rs  utils.rs
crates/graphiti-mcp/src/app/: middleware.rs  mod.rs
crates/graphiti-mcp/src/handlers/: http.rs  mcp.rs  mod.rs  serena.rs
crates/graphiti-mcp/src/integration/: activity_detector.rs  config.rs  context_analyzer.rs  hooks.rs  knowledge_manager.rs  mod.rs
crates/graphiti-mcp/src/learning/: config.rs  detector.rs  events.rs  mod.rs  notifications.rs
crates/graphiti-mcp/src/middleware/: auth.rs  mod.rs  rate_limit.rs
crates/graphiti-mcp/src/models/: config.rs  mod.rs  requests.rs  responses.rs
crates/graphiti-mcp/src/services/: graphiti.rs  mod.rs
crates/graphiti-ner/: Cargo.toml
crates/graphiti-ner/src/: candle_ner_extractor.rs  hybrid_extractor.rs  lib.rs  rust_bert_extractor.rs
crates/graphiti-prompts/: Cargo.toml
crates/graphiti-prompts/src/: dedupe_edges.rs  dedupe_nodes.rs  extract_edges.rs  extract_nodes.rs  invalidate_edges.rs  lib.rs  models.rs  summarize_nodes.rs  templates.rs
crates/graphiti-search/: Cargo.toml
crates/graphiti-search/src/: lib.rs  vector.rs
deploy/kubernetes/: configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
deploy/systemd/: graphiti-mcp.service
docker/: README.md
examples/: distributed_knowledge_graph.rs  distributed_network_example.rs  end_to_end_workflow.rs  llm_integration_test.rs  performance_benchmark.rs  real_data_integration.rs
io-equivalence/: io-equivalence-spec.md
mcp-io-eval/: README.md  cases.mapping.json
mcp-io-eval/cases/: add_memory.A1.json  cases.yaml  list_schemas.json  related.R1.json  search_facts.F1.json  search_nodes.S1.json
mcp-io-eval/driver/: assertions.py  run_suite.py  schema_diff.py  stdio_client.py  utils.py
mcp-io-eval/harness/: canonicalizer.py  config.py  differ.py  launcher.py  mcp_runner.py  targets.yaml
mcp-io-eval/scripts/: canonicalize.py  diff_two.py  run_all.py
mcp-io-eval/snapshots/: .gitkeep
mcp_client/: client.py
