[package]
name = "graphiti-context-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
graphiti-context = { path = "../graphiti-context" }
anyhow.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
indicatif = "0.17"
dotenvy.workspace = true
serde_json.workspace = true

