[package]
name = "graphiti-context"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
ignore.workspace = true
globset.workspace = true
md-5.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
tokio.workspace = true
qdrant-client.workspace = true
reqwest.workspace = true

# Optional Candle/Gemma deps
candle-core = { workspace = true, optional = true }
candle-nn = { workspace = true, optional = true }
candle-transformers = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
safetensors = { version = "0.4", optional = true }
bytemuck = { version = "1.14", optional = true }

# Optional EmbedAnything for Qwen3 support
embed_anything = { git = "https://github.com/StarlightSearch/EmbedAnything", optional = true }

[features]
candle-gemma = [
  "dep:candle-core",
  "dep:candle-nn",
  "dep:candle-transformers",
  "dep:hf-hub",
  "dep:tokenizers",
  "dep:safetensors",
  "dep:bytemuck",
]
embed-anything = [
  "dep:embed_anything"
]

