[package]
name = "graphiti-core"
version = "0.1.0"
authors = ["Graphiti Contributors"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/getzep/graphiti"

[dependencies]

# Async
tokio = { version = "1.41", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
async-trait = "0.1"
pin-project = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.20"
dashmap = "6.1"
num_cpus = "1.16"

# Logging
tracing = "0.1"

# Schema validation
jsonschema = "0.18"
validator = "0.18"

# Configuration
config = "0.14"
dotenvy = "0.15"
toml = "0.8"
serde_yaml = "0.9.34"

[dev-dependencies]
mockall = "0.13"
proptest = "1.6"
tokio = { version = "1.41", features = ["test-util", "full"] }
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "graphiti_bench"
harness = false
