[package]
name = "graphiti-llm"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Local dependencies
graphiti-core = { path = "../graphiti-core" }

# HTTP client
reqwest.workspace = true
tower.workspace = true

# Async
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
async-trait.workspace = true
pin-project.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true

# Logging
tracing.workspace = true

# Rate limiting
governor.workspace = true
nonzero_ext.workspace = true

# Caching
moka.workspace = true

# Machine Learning (Candle)
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
tokenizers.workspace = true
hf-hub.workspace = true

# EmbedAnything for Qwen3 support
embed_anything = { git = "https://github.com/StarlightSearch/EmbedAnything", optional = true }

[features]
default = []
embed-anything = ["dep:embed_anything"]

[dev-dependencies]
mockall.workspace = true
wiremock = "0.6"