[package]
name = "graphiti-ner"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Local dependencies
graphiti-core = { path = "../graphiti-core" }
graphiti-llm = { path = "../graphiti-llm" }

# Candle ML framework
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true

# Tokenization
tokenizers.workspace = true
hf-hub.workspace = true

# Async
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true

# Utilities
once_cell = "1.20"
regex = "1.11"

# Advanced NER with rust-bert
rust-bert = { workspace = true, optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = []
rust-bert-ner = ["rust-bert"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]